# FastSIMUS

./: .gitignore  .pre-commit-config.yaml  4090_v11_baseline.ncu-rep  4090_v15_b9et4.ncu-rep  4090_v21_idealized.ncu-rep  4090_v21_idealized_b5et4.ncu-rep  4090_v22_nochain_b1et8.ncu-rep  4090_v22_nochain_b9et8.ncu-rep  4090_v22_nochain_ilp_b3et8.ncu-rep  4090_v25c_b7et4.ncu-rep  4090_v25c_b9et2.ncu-rep  AGENTS.md  README.md  bench_direct_vs_progression.py  manifest  mkdocs.yml  prd.md  pyproject.toml  skills-lock.json  test_fused_v11.py
.agents/knowledge/: 2026-03-07-backend-strategy-implementation.md
.agents/skills/: mlx-metal-kernels.md  pydantic-attribute-docstrings.md
.agents/skills/flox-cuda/: SKILL.md
.agents/skills/flox-environments/: SKILL.md
.claude/: settings.json
.claude/skills/: array-api-typing.md  flox-cuda  googledoc-docstrings.md  lint-test-poe.md  mlx-metal-kernels.md  performance-profiling.md  pydantic-attribute-docstrings.md  python-unit-testing.md
.cursor/agents/: array-api-validator.md  pr-comment-responder.md  pymust-validator.md  test-first-dev.md
.cursor/rules/: google-docstrings.md  google-docstrings.mdc  python-conventions.mdc
.cursor/skills/cuda-kernel-optimization/: SKILL.md
.cursor/skills/gpu-profiling/: SKILL.md
.cursor/skills/jax-pallas-kernels/: SKILL.md
.flox/: env.json
.flox/cuda13/.flox/: env.json
.flox/cuda13/.flox/env/: manifest.toml
.flox/env/: manifest.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: benchmark.yml  check.yml  ci.yml  cuda-smoke.yml  publish.yml  test.yml
docker/: .dockerignore  Dockerfile  starship.toml
docs/: HANDOFF-RTX4090.md
docs/brainstorms/: 2026-03-12-tiled-progression-brainstorm.md  2026-03-13-frequency-parallelism-brainstorm.md
docs/dev/: cuda-runner.md
docs/progress/: architecture-exploration.md  cuda-kernel-optimization.md
docs/progress/experiments/: 2026-04-cuda-fastpath-ncu.md  exp1-v6-baseline.md  exp10-combined-analysis.md  exp11-block-count-sweep.md  exp12-grid-y-partitioning.md  exp13-l2-persistence.md  exp14-scat-reduce.md  exp15-rtx4090-baseline.md  exp16-two-pass-4090.md  exp17-fp16-tx-4090.md  exp18-30M-architecture.md  exp19-idealized-ceiling.md  exp2-v11-b2.md  exp20-6-blocks-per-sm.md  exp21-regtx-fp32.md  exp22-svshmem-et2.md  exp3-v11-launch-bounds.md  exp4-v11-shmem-opt.md  exp5-batching-sweep.md  exp6-per-block-output.md  exp7-freq-chunk.md  exp8-two-pass-tiled.md  exp9-fp16-tx-optimization.md
docs/progress/handoffs/: 2026-04-30-numpy-simus-scaling-handoff.md
docs/progress/plans/: 2026-04-07-idealized-kernel-ceiling.md  2026-04-17-6-blocks-per-sm-ceiling.md  2026-04-27-v23-chainsplit.md  2026-04-28-cuda-cupy-backend.md  2026-04-28-cuda-simus-fastpath.md
docs/simus_p1/: simus_p1.md  simus_p1_meta.json
experiments/: benchmark_memory_strategies.py
scripts/: ncu_pytest.py  plot_benchmark_scaling.py
src/fast_simus/: __init__.py  _pfield_math.py  _pfield_strategies.py  _simus_strategies.py  medium_params.py  pfield.py  simus.py  spectrum.py  transducer_params.py  transducer_presets.py  tx_delay.py  txdelay.m  txdelay.py
src/fast_simus/backends/: __init__.py  mlx.py
src/fast_simus/kernels/: __init__.py  cuda_runtime.py  cuda_simus.py  metal_pfield.py  metal_simus.py  pallas_simus.py  pfield.metal  simus.metal  simus_fused.cu  simus_fused_v11.cu  simus_fused_v11_stagger.cu  simus_fused_v12.cu  simus_fused_v13_freqchunk.cu  simus_fused_v15.cu  simus_fused_v15_noatomic.cu  simus_fused_v16.cu  simus_fused_v17.cu  simus_fused_v19.cu  simus_fused_v20.cu  simus_fused_v21_constfreq.cu  simus_fused_v21_idealized.cu  simus_fused_v21_noatom.cu  simus_fused_v21_singleelem.cu  simus_fused_v22_floor.cu  simus_fused_v22_lb6.cu  simus_fused_v22_nochain.cu  simus_fused_v22_nochain_ilp.cu  simus_fused_v22_tg64.cu  simus_fused_v23_chainsplit.cu  simus_fused_v23b_advsplit.cu  simus_fused_v25_regtx.cu  simus_fused_v25b_regtx_unroll.cu  simus_fused_v25c_svshmem.cu  simus_fused_v26_freqchunk.cu  simus_fused_v6.cu  simus_rx.metal  simus_rx_gridy_v18.cu  simus_rx_simd.metal  simus_rx_tiled_v14.cu  simus_rx_v14.cu  (+5 more)
src/fast_simus/utils/: __init__.py  _array_api.py  geometry.py
stubs/array_api_extra/: __init__.pyi
tests/: __init__.py  _picmus_contrast_artifacts.py  _picmus_contrast_loader.py  _picmus_phantom_shared.py  conftest.py  test_benchmark_device_label_hook.py  test_medium.py  test_ncu_pytest.py  test_pfield.py  test_pfield_helpers.py  test_pfield_math.py  test_picmus_phantom.py  test_picmus_phantom_shared.py  test_placeholder.py  test_plot_benchmark_scaling.py  test_simus.py  test_spectrum.py  test_transducers.py  test_tx_delay.py  test_txdelay.py
tests/backend/: README.md  __init__.py  test_cupy.py  test_jax.py  test_mlx.py
tests/benchmarks/: _bench_sync.py  _simus_bench_util.py  bench_pfield.py  bench_pymust_scaling.py  bench_simus.py  bench_simus_scaling.py  conftest.py
tests/scripts/: test_plot_benchmark_scaling.py
tests/utils/: test_array_api.py
thoughts/shared/plans/: 2026-03-03-mlx-compat-refactor.md  2026-03-07-backend-strategy-architecture.md
thoughts/shared/research/: 2026-02-21-fastsimus-mlx-pfield-research.md  2026-03-03-pfield-memory-strategies.md  2026-03-05-pfield-performance-strategies-brainstorm.md
tools/: accuracy_compare.py  bench_6blk_ceiling.py  bench_compute_floor.py  bench_idealized_ceiling.py  bench_pallas.py  bench_pallas_mini.py  bench_pallas_small.py  bench_pallas_v2.py  bench_tiled_scan.py  bench_v19_v20.py  bench_v23.py  ncu_parse.py  ncu_profile.py  ncu_profile_l2persist.py  ncu_profile_v15.py  ncu_profile_v16.py  ncu_profile_v21.py  ncu_profile_v22.py  ncu_profile_v25.py  test_two_pass_4090.py  theoretical_limits.py  validate_v23.py
