# ---- Project Info and Dependencies ----

[project.urls]
Repository = "https://github.com/charlesbmi/FastSIMUS"
Homepage = "https://github.com/charlesbmi/FastSIMUS"
Documentation = "https://charlesbmi.github.io/FastSIMUS/"

[project]
name = "FastSIMUS"
description = "Fast simulator for medical ultrasound, based on SIMUS/MUST"
authors = [
    { name = "Charles Guan" },
]
keywords = ["ultrasound", "simulation", "SIMUS", "array",]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<4.0"
version = "0.0.1"

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]


# ---- Main dependencies ----

dependencies = [
]


# ---- Dev dependencies ----

[dependency-groups]
dev = [
    "poethepoet>=0.32.1",
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "test"},
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
    "mkdocs-include-markdown-plugin>=4.0.0",
]
lint = [
    "codespell>=2.4.1",
    "deptry>=0.24.0",
    "ruff>=0.14.11",
    "ty>=0.0.13",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=6.1.0",
    "pytest-sugar>=1.1.1",
]


# ---- Poe the Poet task runner ----

[tool.poe.tasks]

[tool.poe.tasks.install]
help = "Install the virtual environment using uv"
cmd = "uv sync"

[tool.poe.tasks.lint]
help = "Run code quality tools"
sequence = [
    { cmd = "ruff format src tests" },
    { cmd = "ruff check --fix src tests" },
    { cmd = "ty check" },
    { cmd = "codespell src tests docs" },
    { cmd = "deptry src" },
]

[tool.poe.tasks.test]
help = "Test the code with pytest"
cmd = "pytest --cov --cov-config=pyproject.toml --cov-report=xml"

[tool.poe.tasks.build]
help = "Build wheel file"
sequence = [
    { ref = "clean" },
    { cmd = "uv build" },
]

[tool.poe.tasks.clean]
help = "Clean build artifacts"
script = "shutil:rmtree('dist', ignore_errors=True)"

[tool.poe.tasks.docs-test]
help = "Test if documentation can be built without warnings or errors"
cmd = "mkdocs build -s"

[tool.poe.tasks.docs]
help = "Build and serve the documentation"
cmd = "mkdocs serve"


# ---- lint settings ----

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "B",     # flake8-bugbear
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "RUF",   # ruff
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "UP",    # pyupgrade
    "W",     # pycodestyle warnings
]

ignore = [
    # Disable some rules that are overly pedantic:
    "SIM108", # https://docs.astral.sh/ruff/rules/if-else-block-instead-of-if-exp/
    # We use both ruff formatter and linter so some rules should always be disabled.
    # See: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191", # https://docs.astral.sh/ruff/rules/tab-indentation/
    "E111", # https://docs.astral.sh/ruff/rules/indentation-with-invalid-multiple/
    "E114", # https://docs.astral.sh/ruff/rules/indentation-with-invalid-multiple-comment/
    "E117", # https://docs.astral.sh/ruff/rules/over-indented/
    "D206", # https://docs.astral.sh/ruff/rules/docstring-tab-indentation/
    "D300", # https://docs.astral.sh/ruff/rules/triple-single-quotes/
    "Q000", # https://docs.astral.sh/ruff/rules/bad-quotes-inline-string/
    "Q001", # https://docs.astral.sh/ruff/rules/bad-quotes-multiline-string/
    "Q002", # https://docs.astral.sh/ruff/rules/bad-quotes-docstring/
    "Q003", # https://docs.astral.sh/ruff/rules/avoidable-escaped-quote/
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/
    "COM819", # https://docs.astral.sh/ruff/rules/prohibited-trailing-comma/
    "ISC002", # https://docs.astral.sh/ruff/rules/multi-line-implicit-string-concatenation/
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]


# ---- test settings ----
[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = [
    "src",
]

