# ---- Project Info and Dependencies ----

[project.urls]
Repository = "https://github.com/charlesbmi/FastSIMUS"
Homepage = "https://github.com/charlesbmi/FastSIMUS"
Documentation = "https://charlesbmi.github.io/FastSIMUS/"

[project]
name = "FastSIMUS"
description = "Fast simulator for medical ultrasound, based on SIMUS/MUST"
authors = [
    { name = "Charles Guan" },
]
keywords = ["ultrasound", "simulation", "SIMUS", "array",]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<4.0"
version = "0.0.1"

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "array-api-compat>=1.13",
    "array-api-extra==0.10.1",
    "beartype>=0.19.0",
    "jaxtyping>=0.2.37",
    "pydantic>=2.0,<3.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "fast_simus"


# ---- Dev dependencies ----

[dependency-groups]
dev = [
    "poethepoet>=0.32.1",
    "prek>=0.3.0",
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "test-parallel" },
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
    "mkdocs-include-markdown-plugin>=4.0.0",
]
lint = [
    "codespell>=2.4.1",
    "deptry>=0.24.0",
    "mdformat>=0.7.21",
    "mdformat-gfm>=0.3.6",
    "ruff>=0.14.11",
    "ty>=0.0.13",
]
# Test groups are split because pytest-xdist and pytest-benchmark conflict in parallel mode
# - test: base test dependencies
# - test-parallel: adds xdist for parallel test execution (default for dev)
# - bench: adds benchmark plugin (use `uv sync --group bench` for benchmarking)
test = [
    "pytest>=9.0.2",
    "pytest-cov>=6.1.0",
    "pytest-sugar>=1.1.1",
    "pytest-testmon>=2.2.0",
    "array-api-strict>=2.0",
    "numpy>=2.3",
    "jax>=0.9",
    "equinox>=0.11",
    "mlx>=0.31; platform_system == 'Darwin'",
    "pymust>=0.1.9",
]
test-parallel = [
    { include-group = "test" },
    "pytest-xdist>=3.8.0",
]
bench = [
    { include-group = "test" },
    "pytest-benchmark[histogram]>=4.0.0",
]


# ---- Poe the Poet task runner ----

[tool.poe]
executor = "uv"

[tool.poe.tasks]

[tool.poe.tasks.install]
help = "Install the virtual environment using uv"
cmd = "uv sync"

[tool.poe.tasks.pre-commit]
help = "Run pre-commit hooks on all files"
cmd = "prek run --all-files"

[tool.poe.tasks.lint]
help = "Run code quality tools"
sequence = [
    { cmd = "ruff format src tests" },
    { cmd = "ruff check --fix src tests" },
    { cmd = "ty check" },
    { cmd = "mdformat README.md docs --wrap 120" },
    { cmd = "codespell src tests docs README.md" },
    { cmd = "deptry src" },
    { ref = "pre-commit" },
]

[tool.poe.tasks.test]
help = "Test only code affected by recent changes, in parallel"
cmd = "pytest --testmon -n auto -p no:benchmark"
# Need isolated = true to avoid conflicts with pytest-benchmark
executor = { group = "test-parallel", python = "<3.14"}

[tool.poe.tasks.test-all]
help = "Test all code (no benchmarks)"
cmd = "pytest -n auto --cov --cov-config=pyproject.toml --cov-report=xml -p no:benchmark"
# Need isolated = true to avoid conflicts with pytest-benchmark
executor = { group = "test-parallel" }

[tool.poe.tasks.benchmark]
help = "Run performance benchmarks"
cmd = "pytest --benchmark-only --benchmark-autosave -p no:xdist --benchmark-min-rounds=2 --benchmark-warmup-iterations 1"
executor = { group = "bench" }


[tool.poe.tasks.build]
help = "Build wheel file"
sequence = [
    { ref = "clean" },
    { cmd = "uv build" },
]

[tool.poe.tasks.clean]
help = "Clean build artifacts"
script = "shutil:rmtree('dist', ignore_errors=True)"

[tool.poe.tasks.docs-test]
help = "Test if documentation can be built without warnings or errors"
cmd = "mkdocs build -s"
executor = { group = "docs" }

[tool.poe.tasks.docs]
help = "Build and serve the documentation"
cmd = "mkdocs serve"
executor = { group = "docs" }


# ---- lint settings ----

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "B",     # flake8-bugbear
    "D",     # pydocstyle
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "PLC0415", # https://docs.astral.sh/ruff/rules/import-outside-top-level/
    "RUF",   # ruff
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "UP",    # pyupgrade
    "W",     # pycodestyle warnings
]

ignore = [
    # Disable some rules that are overly pedantic:
    "SIM108", # https://docs.astral.sh/ruff/rules/if-else-block-instead-of-if-exp/
    "F722", # forward annotations: jaxtyping compatibility
    # We use both ruff formatter and linter so some rules should always be disabled.
    # See: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",   # https://docs.astral.sh/ruff/rules/tab-indentation/
    "E111",   # https://docs.astral.sh/ruff/rules/indentation-with-invalid-multiple/
    "E114",   # https://docs.astral.sh/ruff/rules/indentation-with-invalid-multiple-comment/
    "E117",   # https://docs.astral.sh/ruff/rules/over-indented/
    "D206",   # https://docs.astral.sh/ruff/rules/docstring-tab-indentation/
    "D300",   # https://docs.astral.sh/ruff/rules/triple-single-quotes/
    "Q000",   # https://docs.astral.sh/ruff/rules/bad-quotes-inline-string/
    "Q001",   # https://docs.astral.sh/ruff/rules/bad-quotes-multiline-string/
    "Q002",   # https://docs.astral.sh/ruff/rules/bad-quotes-docstring/
    "Q003",   # https://docs.astral.sh/ruff/rules/avoidable-escaped-quote/
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/
    "COM819", # https://docs.astral.sh/ruff/rules/prohibited-trailing-comma/
    "ISC002", # https://docs.astral.sh/ruff/rules/multi-line-implicit-string-concatenation/
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"tests/**/*" = ["PLC0415"]  # Deferred imports for optional dependencies
"src/fast_simus/tx_delay.py" = ["F722"]  # Jaxtyping variadic dims

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.deptry.package_module_name_map]
pytest-benchmark = "pytest_benchmark"

[tool.ty.environment]
extra-paths = ["stubs"]


# ---- test settings ----
[tool.pytest.ini_options]
filterwarnings = [
    "error",  # FastSIMUS: treat all warnings as errors
    "ignore::SyntaxWarning:pymust.*",  # PyMUST: invalid escape sequences in simus/mkmovie
    "ignore::DeprecationWarning:pymust.*",
    # PyMUST has \m in docstrings; module filter can't catch compile-time warnings,
    # so match by message instead. DeprecationWarning on 3.11, SyntaxWarning on 3.12+.
    "ignore:invalid escape sequence:DeprecationWarning",
    "ignore:invalid escape sequence:SyntaxWarning",
]
testpaths = ["tests"]
addopts = ["--strict-markers", "--strict-config"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
source = ["src"]
