# ---- Project Info and Dependencies ----

[project.urls]
Repository = "https://github.com/charlesbmi/FastSIMUS"
Homepage = "https://github.com/charlesbmi/FastSIMUS"
Documentation = "https://charlesbmi.github.io/FastSIMUS/"

[project]
name = "FastSIMUS"
description = "Fast simulator for medical ultrasound, based on SIMUS/MUST"
authors = [
    { name = "Charles Guan" },
]
keywords = ["ultrasound", "simulation", "SIMUS", "array",]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<4.0"
version = "0.0.1"

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "array-api-compat>=1.13",
    "array-api-extra==0.11.0",
    "beartype>=0.19.0",
    "jaxtyping>=0.2.37",
    "pydantic>=2.0,<3.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "fast_simus"


# ---- Dev dependencies ----

[dependency-groups]
dev = [
    "poethepoet>=0.32.1",
    "prek>=0.3.0",
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "plot" },
    { include-group = "test-parallel" },
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.0",
    "mkdocs-include-markdown-plugin>=4.0.0",
]
lint = [
    "prek>=0.3.0",
    "codespell>=2.4.1",
    "deptry>=0.24.0",
    "mdformat>=0.7.21",
    "mdformat-gfm>=0.3.6",
    "ruff>=0.14.11",
    "ty>=0.0.20",
]
# Test groups are split because pytest-xdist and pytest-benchmark conflict in parallel mode
# - test: base test dependencies
# - test-parallel: adds xdist for parallel test execution (default for dev)
# - bench: adds benchmark plugin (use `uv sync --group bench` for benchmarking)
test = [
    "pytest>=9.0.2",
    "pytest-cov>=6.1.0",
    "pytest-sugar>=1.1.1",
    "pytest-testmon>=2.2.0",
    "array-api-strict>=2.0",
    "numpy>=2.3",
    "jax>=0.9",
    "equinox>=0.11",
    "mlx>=0.31; platform_system == 'Darwin'",
    "pymust>=0.1.9",
    "h5py>=3.16.0",
]
test-parallel = [
    { include-group = "test" },
    "pytest-xdist>=3.8.0",
]
test-plot = [
    { include-group = "test" },
    { include-group = "plot" },
]
bench = [
    { include-group = "test" },
    { include-group = "plot" },
    "pytest-benchmark[histogram]>=4.0.0",
]
# Plotting deps are separate so `bench` users who only need raw JSON can skip them.
plot = [
    "matplotlib>=3.10",
    "pandas>=2.2",
    "seaborn>=0.13",
]
cuda12 = [
    "cupy-cuda12x>=13.0; platform_system == 'Linux'",
]
cuda13 = [
    "cupy-cuda13x[ctk]>=13.0; platform_system == 'Linux'",
]

[tool.uv]
conflicts = [
    [
        { group = "cuda12" },
        { group = "cuda13" },
    ],
]


# ---- Poe the Poet task runner ----

[tool.poe]
executor = "uv"

[tool.poe.tasks]

[tool.poe.tasks.install]
help = "Install the virtual environment using uv"
shell = "uv sync --group \"${CUDA_GROUP:-${FASTSIMUS_CUDA_GROUP:-cuda12}}\""
args = [
    { name = "CUDA_GROUP", options = ["--cuda-group"], help = "uv CUDA dependency group to sync (cuda12 or cuda13)" },
]

[tool.poe.tasks.pre-commit]
help = "Run pre-commit hooks on all files"
cmd = "prek run --all-files"

[tool.poe.tasks.lint]
help = "Run code quality tools"
sequence = [
    { cmd = "uv lock --locked" },
    { cmd = "ruff format src tests" },
    { cmd = "ruff check --fix src tests" },
    { cmd = "ty check" },
    { cmd = "mdformat README.md docs --wrap 120" },
    { cmd = "codespell src tests docs README.md" },
    { cmd = "deptry src" },
    { ref = "pre-commit" },
]

[tool.poe.tasks.test]
help = "Test only code affected by recent changes, in parallel"
cmd = "pytest tests/ --ignore=tests/benchmarks --testmon -n auto -p no:benchmark"
# Need isolated = true to avoid conflicts with pytest-benchmark
executor = { group = "test-parallel" }

[tool.poe.tasks.test-all]
help = "Test all code (no benchmarks)"
cmd = "pytest tests/ --ignore=tests/benchmarks -n auto --cov --cov-config=pyproject.toml --cov-report=xml -p no:benchmark"
# Need isolated = true to avoid conflicts with pytest-benchmark
executor = { group = "test-parallel" }

[tool.poe.tasks.test-picmus-contrast]
help = "Run the gated PICMUS contrast center-angle RF smoke test; set PICMUS_CONTRAST_PHANTOM to contrast_speckle_simu_phantom.hdf5"
cmd = "pytest -s tests/test_picmus_phantom.py::test_picmus_contrast_public_rf_simulation_is_gated -m slow --run-picmus-contrast --picmus-contrast-phantom \"$PICMUS_CONTRAST_PHANTOM\" --picmus-contrast-angle-mode center -p no:benchmark"
executor = { group = "test" }

[tool.poe.tasks.test-picmus-contrast-full]
help = "Run the gated PICMUS contrast full 75-angle RF comparison; set PICMUS_CONTRAST_PHANTOM"
cmd = "pytest -s tests/test_picmus_phantom.py::test_picmus_contrast_public_rf_simulation_is_gated -m slow --run-picmus-contrast --picmus-contrast-phantom \"$PICMUS_CONTRAST_PHANTOM\" --picmus-contrast-angle-mode full -p no:benchmark"
executor = { group = "test" }

[tool.poe.tasks.test-picmus-contrast-artifacts]
help = "Run full 75-angle contrast RF, save beamformed HDF5, and generate figures; set PICMUS_CONTRAST_PHANTOM"
cmd = "pytest -s tests/test_picmus_phantom.py::test_picmus_contrast_public_rf_simulation_is_gated -m slow --run-picmus-contrast --picmus-contrast-phantom \"$PICMUS_CONTRAST_PHANTOM\" --picmus-contrast-angle-mode full --picmus-contrast-figure-dir \"${PICMUS_CONTRAST_FIGURE_DIR:-.artifacts/picmus_contrast}\" --picmus-contrast-save-beamformed \"${PICMUS_CONTRAST_BEAMFORMED:-.artifacts/picmus_contrast/picmus_contrast_beamformed_75_angle.hdf5}\" -p no:benchmark"
executor = { group = "test-plot" }

[tool.poe.tasks.plot-picmus-contrast-artifacts]
help = "Regenerate PICMUS contrast figures from saved beamformed HDF5; set PICMUS_CONTRAST_PHANTOM"
cmd = "pytest -s tests/test_picmus_phantom.py::test_picmus_contrast_public_rf_simulation_is_gated -m slow --run-picmus-contrast --picmus-contrast-phantom \"$PICMUS_CONTRAST_PHANTOM\" --picmus-contrast-figure-dir \"${PICMUS_CONTRAST_FIGURE_DIR:-.artifacts/picmus_contrast}\" --picmus-contrast-load-beamformed \"${PICMUS_CONTRAST_BEAMFORMED:-.artifacts/picmus_contrast/picmus_contrast_beamformed_75_angle.hdf5}\" -p no:benchmark"
executor = { group = "test-plot" }

[tool.poe.tasks.benchmark]
help = "Run performance benchmarks"
cmd = "pytest tests/benchmarks/ --benchmark-only --benchmark-autosave -p no:xdist -p no:testmon -m 'not scaling'"
executor = { group = "bench" }

[tool.poe.tasks.benchmark-scaling-run]
help = "Run scaling benchmarks only (JSON output under .benchmarks/, no plot)"
cmd = "pytest tests/benchmarks/ --benchmark-only --benchmark-autosave -p no:xdist -p no:testmon -m scaling"
executor = { group = "bench" }

[tool.poe.tasks.benchmark-plot]
help = "Plot scaling results from one or more pytest-benchmark JSON files (default: .benchmarks/**/*.json)"
cmd = "python scripts/plot_benchmark_scaling.py .benchmarks/**/*.json"
executor = { group = "bench" }

[tool.poe.tasks.benchmark-scaling]
help = "Run scaling benchmarks (1K-1M scatterers, slow) and regenerate the scaling plot"
sequence = [
    { ref = "benchmark-scaling-run" },
    { ref = "benchmark-plot" },
]

[tool.poe.tasks.profile-cuda]
help = "Profile a CUDA simus benchmark under Nsight Compute. Pass -k <expr> -o <out>."
shell = "\"$(which python)\" scripts/ncu_pytest.py -k \"$K\" -o \"$OUTPUT\" --launch-skip \"$LAUNCH_SKIP\" --launch-count \"$LAUNCH_COUNT\" --set \"$SET\" --bench-path \"$BENCH_PATH\""
executor = { group = "bench" }
args = [
    { name = "K", options = ["-k"], help = "pytest -k expression passed to the profiled benchmark" },
    { name = "OUTPUT", options = ["-o", "--output"], help = ".ncu-rep output path" },
    { name = "LAUNCH_SKIP", options = ["--launch-skip"], default = "5", help = "Number of kernel launches to skip" },
    { name = "LAUNCH_COUNT", options = ["--launch-count"], default = "1", help = "Number of kernel launches to capture" },
    { name = "SET", options = ["--set"], default = "full", help = "Nsight Compute metric set" },
    { name = "BENCH_PATH", options = ["--bench-path"], default = "tests/benchmarks/bench_simus_scaling.py", help = "pytest benchmark target" },
]

[tool.poe.tasks.profile-cuda-legacy]
help = "Profile a CUDA simus benchmark with nvprof for Pascal GPUs. Pass -k <expr> -o <log>."
shell = "NVPROF=\"${NVPROF:-$(command -v nvprof)}\"; if [ -z \"$NVPROF\" ]; then echo 'nvprof not found; install a host CUDA toolkit that still provides nvprof for Pascal GPUs.' >&2; exit 127; fi; \"$NVPROF\" --print-gpu-trace --log-file \"$OUTPUT\" \"$(which python)\" -m pytest \"$BENCH_PATH\" --benchmark-only -p no:xdist -p no:testmon -k \"$K\" --benchmark-min-rounds=1 --benchmark-min-time=0"
executor = { group = "bench" }
args = [
    { name = "K", options = ["-k"], help = "pytest -k expression passed to the profiled benchmark" },
    { name = "OUTPUT", options = ["-o", "--output"], help = "nvprof text log output path" },
    { name = "BENCH_PATH", options = ["--bench-path"], default = "tests/benchmarks/bench_simus_scaling.py", help = "pytest benchmark target" },
]

[tool.poe.tasks.build]
help = "Build wheel file"
sequence = [
    { ref = "clean" },
    { cmd = "uv build" },
]

[tool.poe.tasks.clean]
help = "Clean build artifacts"
script = "shutil:rmtree('dist', ignore_errors=True)"

[tool.poe.tasks.docs-test]
help = "Test if documentation can be built without warnings or errors"
cmd = "mkdocs build -s"
executor = { group = "docs" }

[tool.poe.tasks.docs]
help = "Build and serve the documentation"
cmd = "mkdocs serve"
executor = { group = "docs" }


# ---- lint settings ----

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "B",     # flake8-bugbear
    "D",     # pydocstyle
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "PLC0415", # https://docs.astral.sh/ruff/rules/import-outside-top-level/
    "RUF",   # ruff
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "UP",    # pyupgrade
    "W",     # pycodestyle warnings
]

ignore = [
    # Disable some rules that are overly pedantic:
    "SIM108", # https://docs.astral.sh/ruff/rules/if-else-block-instead-of-if-exp/
    "F722", # forward annotations: jaxtyping compatibility
    # We use both ruff formatter and linter so some rules should always be disabled.
    # See: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",   # https://docs.astral.sh/ruff/rules/tab-indentation/
    "E111",   # https://docs.astral.sh/ruff/rules/indentation-with-invalid-multiple/
    "E114",   # https://docs.astral.sh/ruff/rules/indentation-with-invalid-multiple-comment/
    "E117",   # https://docs.astral.sh/ruff/rules/over-indented/
    "D206",   # https://docs.astral.sh/ruff/rules/docstring-tab-indentation/
    "D300",   # https://docs.astral.sh/ruff/rules/triple-single-quotes/
    "Q000",   # https://docs.astral.sh/ruff/rules/bad-quotes-inline-string/
    "Q001",   # https://docs.astral.sh/ruff/rules/bad-quotes-multiline-string/
    "Q002",   # https://docs.astral.sh/ruff/rules/bad-quotes-docstring/
    "Q003",   # https://docs.astral.sh/ruff/rules/avoidable-escaped-quote/
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/
    "COM819", # https://docs.astral.sh/ruff/rules/prohibited-trailing-comma/
    "ISC002", # https://docs.astral.sh/ruff/rules/multi-line-implicit-string-concatenation/
]

[tool.ruff.lint.per-file-ignores]
# S101: assert in tests; PLC0415: deferred imports in tests; E402: importorskip before importing package under test
"tests/**" = ["S101", "PLC0415", "E402"]
# Lazy imports for optional JAX / MLX / Metal kernels (import cost and deptry DEP004)
"src/fast_simus/simus.py" = ["PLC0415"]
"src/fast_simus/pfield.py" = ["PLC0415"]
"src/fast_simus/_simus_strategies.py" = ["PLC0415"]
"src/fast_simus/_pfield_strategies.py" = ["PLC0415"]
"src/fast_simus/backends/mlx.py" = ["PLC0415"]
"src/fast_simus/tx_delay.py" = ["F722"]  # Jaxtyping variadic dims

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.deptry.package_module_name_map]
pytest-benchmark = "pytest_benchmark"
mlx = "mlx"
cupy-cuda12x = "cupy"
cupy-cuda13x = "cupy"

[tool.deptry.per_rule_ignores]
DEP004 = ["jax", "mlx", "cupy"]

[tool.ty.environment]
extra-paths = ["stubs"]

[tool.ty.src]
exclude = ["bench_*.py"]

[tool.ty.analysis]
allowed-unresolved-imports = ["mlx.**", "cupy", "cupy.**"]

[tool.codespell]
ignore-words-list = "te,nax"


# ---- test settings ----
[tool.pytest.ini_options]
python_files = [
    "test_*.py",
    "*_test.py",
    "bench_*.py",
]
filterwarnings = [
    "error",  # FastSIMUS: treat all warnings as errors
    "ignore::SyntaxWarning:pymust.*",  # PyMUST: invalid escape sequences in simus/mkmovie
    "ignore::DeprecationWarning:pymust.*",
    # PyMUST has \m in docstrings that trigger compile-time SyntaxWarning/DeprecationWarning.
    # Warning filter message matching uses re.match() (anchored at start), so patterns need
    # a leading .* to match messages like '"\\m" is an invalid escape sequence...'.
    "ignore:.*invalid escape sequence:DeprecationWarning",
    "ignore:.*invalid escape sequence:SyntaxWarning",
]
testpaths = ["tests"]
addopts = ["--strict-markers", "--strict-config"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "scaling: large scatterer-count benchmarks (run with '-m scaling')",
]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
source = ["src"]
